5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1636_2449.log
== TEST (2019-04-15 13:22:56) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)

if (vari != 0) :
	print(x)
	print(y)
	
else :
	print(x)
	print(y)
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:44) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

x = (c * e - b * f) / (a * e - b * d)
y = (a * f - c * d) / (a * e - b * d)

if (vari != 0) :
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:45) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = (c * e - b * f) / (a * e - b * d)
	y = (a * f - c * d) / (a * e - b * d)
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:26:33) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:52:58) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 13:53:20) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari >= 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- EXECUTION TIME:
0.144344
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
Nao tem solucao
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
Nao tem solucao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:25:05) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:25:20) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	print(y)
	
else :
	print("Nao tem solucao")
-- OUTPUT:
1.2
-0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:25:47) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	
	print(x)
	print(y)
	
else :
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print("Nao tem solucao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(y)
NameError: name 'y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:26:05) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	print(x)
	
	
else :
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(y)
	print("Nao tem solucao")
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 14:26:40) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	
	
else :
	
	print(y)
	print("Nao tem solucao")
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:09:13) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))

from math import *

vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / ((a * e) - (b * d))
	y = ((a * f) - (c * d)) / ((a * e) - (b * d))
	print(x)
	
	
else :
	
	print(y)
	print("Nao tem solucao")
-- OUTPUT:
1.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 08:11:04) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))



vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / (vari)
	y = ((a * f) - (c * d)) / (vari)
	print(x)
	print(y)
	
else :
	
	print("Nao tem solucao")
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-17 08:11:15) 
-- CODE:
a=float(input("numero a :"))
b=float(input("numero b :"))
c=float(input("numero c :"))
d=float(input("numero d :"))
e=float(input("numero e :"))
f=float(input("numero f :"))



vari= (a * e - b * d)

if (vari != 0) :
	x = ((c * e) - (b * f)) / (vari)
	y = ((a * f) - (c * d)) / (vari)
	print(x)
	print(y)
	
else :
	
	print("Nao tem solucao")
-- EXECUTION TIME:
0.119259
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
